[gd_scene load_steps=4 format=2]

[ext_resource path="res://client/world/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/world/player/bot_controller.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="BotPlayer" instance=ExtResource( 1 )]

[node name="BotController" type="Node2D" parent="." index="19"]
script = ExtResource( 2 )

[node name="FlapDetector" type="Area2D" parent="BotController" index="0"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotController/FlapDetector" index="0"]
shape = SubResource( 1 )

[node name="ForwardDetector" type="Area2D" parent="BotController" index="1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotController/ForwardDetector" index="0"]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="BotController" index="2"]

[node name="UpRaycast" type="RayCast2D" parent="BotController" index="3"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 2

[node name="DownRaycast" type="RayCast2D" parent="BotController" index="4"]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 2

[connection signal="body_entered" from="BotController/FlapDetector" to="BotController" method="_on_FlapDetector_body_entered"]
[connection signal="body_exited" from="BotController/FlapDetector" to="BotController" method="_on_FlapDetector_body_exited"]
[connection signal="body_entered" from="BotController/ForwardDetector" to="BotController" method="_on_ForwardDetector_body_entered"]
[connection signal="body_exited" from="BotController/ForwardDetector" to="BotController" method="_on_ForwardDetector_body_exited"]
[connection signal="velocity_computed" from="BotController/NavigationAgent2D" to="BotController" method="_on_NavigationAgent2D_velocity_computed"]
